v4.4 -- ?
  -avoid linux font metric dependency on Xft, which requires a
   connection to an X server, and instead directly use Fontconfig.
  -fixed a typo that prevented multiple font families from being used
   in the same plot.
  -round instead of truncate when converting between units to
   calculate dimensions in EMF header

v4.3-1 -- 14 Apr 2023
  -changes in v4.3 did not consider the possibility that a *compiling*
   Mac might have different libraries available than the *installing*
   Mac (as can be the case when the package is built by CRAN and
   installed by users as a binary).  This version works around this
   problem by explicitly not trying to use xlib or xft if CoreText is
   available.

v4.3 -- 5 Apr 2023
  -modify autoconf configuration to explicitly test for CoreText on
   Apple platforms (since older OSX versions don't have CoreText) and
   allow use of zlib or xft on Apple if CoreText is unavailable.

v4.2 -- 17 Jan 2023
  -When drawing EMF (not EMF+) text strings, the EMF specification
   allows for supplying inter-character spacing, but the specification
   is ambigiuous as to whether this spacing is required.  In the
   absence of this inter-character spacing, all tested versions of
   LibreOffice and Microsoft Office have no problem loading and view
   EMF files.  However, if Office 365 imports an EMF file with
   individual EMF text strings >= 40 characters long that lack this
   spacing AND then the user attempts to export the Office 365
   document to PDF, then it fails with an error message.  This version
   of devEMF works around this issue by adding inter-character spacing
   to EMF text drawing records.
  -clean up and unify code for handling font metrics.  Add support for
   loading kerning from AFM files.
  -simplify autoconf script & #ifdefs to only specify Xft, not both
   Xft and Freetype, because the existence of Xft implies the
   existence of Freetype.

v4.1-2 -- 14 Dec 2022